refactor: improve cyclomatic complexity of some modules
modules: CustomerService, CustomerDto, TransactionDto, CustomerController, TransactionService